modified:   install_apache.yml 	modified:   inventory 	new file:   site.yml

--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,19 +4,15 @@
   become: true
   tasks:
 
-  - name: update repo index
-    apt:
+#  - name: update repo index
+#    apt:
+#      update_cache: yes
+#    when: ansible_distribution in ["Debian", "Ubuntu"]
+
+  - name: install apache2 and php package for U
+    package:
+      name: 
+        - "{{ apache_package }}"
+        - "{{ php_package }}"
+      state: latest
       update_cache: yes
-    when: ansible_distribution in ["Debian", "Ubuntu"]
-
-  - name: install apache2 package
-    apt:
-      name: apache2
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: add php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
