--- a/site.yml
+++ b/site.yml
@@ -29,3 +29,12 @@
     package:
       name: samba
       state: latest
+
+  - name: copy default html file
+    tags: apache
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644
